# arcsmith

./: .gitignore  README.md
arcsmith-docs/: deploy.ps1  index.html  mkdocs.yml  serve.ps1
arcsmith-docs/docs/: cite.md  index.md
arcsmith-docs/docs/guides/: census_tool_tut.md  compatibility.md  install.md  quick_start.md
arcsmith-docs/docs/overrides/: main.html
arcsmith-docs/docs/reference/: fc.md  flds.md  lyr.md  lyr_presets.md  param.md  tbl.md  ws.md
arcsmith-docs/docs/stylesheets/: arcsmith.css
arcsmith-docs/hooks/: copy_homepage.py
arcsmith-docs/scripts/: gen_favicon.py  gen_social_card.py
pypi_package/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pypi_package/src/arcsmith/: __init__.py  _types.py  fc.py  flds.py  lyr.py  param.py  tbl.py  ws.py
pypi_package/tests/: conftest.py  test_fc.py  test_flds.py  test_lyr.py  test_metadata.py  test_param.py
pypi_package/tests/toolboxes/: test_fc.pyt  test_flds.pyt  test_lyr.pyt  test_param.pyt  test_tbl.pyt  test_ws.pyt
